# rustLogger

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  QUICK_START.md  README.md  config.toml.example  docker-compose.yml  dump.rdb  run_all.sh  test_log.sh
logs/user_123/: 19818.jsonl
src/: cleanup.rs  config.rs  drainer.rs  file_redis_layer.rs  lib.rs  main.rs  rate_limit.rs  types.rs
tests/: TODO.md  api_test.rs  integration_test.rs
tests/design/: FLOW.md
