[package]
name = "log_pipelines"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
redis = { version = "0.24", features = ["tokio-comp"] }
tokio-util = { version = "0.7", features = ["time"] }
toml = "0.8"
tower = "0.4"
tower-http = { version = "0.5", features = ["limit"] }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"